tests/errors/function_return_type_mismatch.dang
# Test function return type mismatch
my_func: String! { 42 }
